libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructNestedTypeFlattened::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type StructNestedTypeFlattened = {
	name: string
} & StructFlattenedEnum;
