libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructOptional::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface StructOptional {
	required: string;
	optional?: number;
}
