libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructSimple::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface StructSimple {
	integer: number;
	float: number;
	string: string;
	boolean: boolean;
}
