libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructSimpleFlattened-Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface StructSimpleFlattened extends StructSimple {
	name: string;
}
