libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructSingleSkipped-Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface StructSingleSkipped {}
