libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructSkipped::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export interface StructSkipped {
	integer: number;
	string: string;
}
