libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructUnnamedDouble-Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type StructUnnamedDouble = [number, string];
