libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructUnnamedDoubleSkipped::Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type StructUnnamedDoubleSkipped = number;
