libs/@local/codegen/tests/standalone-types/snapshots/standalone_types__StructUnnamedMultipleSkipped-Typescript.snap
---
source: libs/@local/codegen/tests/standalone-types/main.rs
expression: generated
---
export type StructUnnamedMultipleSkipped = [number, string];
